manifests/k8s/frontend/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-frontend
  namespace: banking
  labels:
    app.kubernetes.io/name: banking-frontend
    app.kubernetes.io/part-of: dtb-banking-portal
    app.kubernetes.io/component: frontend
    app.kubernetes.io/version: "latest"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: banking-frontend
      app.kubernetes.io/component: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0    

  template:
    metadata:
      labels:
        app.kubernetes.io/name: banking-frontend
        app.kubernetes.io/part-of: dtb-banking-portal
        app.kubernetes.io/component: frontend
        app.kubernetes.io/version: "latest"
      annotations:
        checksum/config: "placeholder-updated-by-pipeline"

    spec:
      
      securityContext:
        runAsNonRoot: true
        runAsUser: 101      
        runAsGroup: 101
        fsGroup: 101

      
      containers:
        - name: frontend
          
          image: DOCKERHUB_USERNAME/banking-frontend:v1.0.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

          
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 12

          
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]

          
          volumeMounts:
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: tmp
          emptyDir: {}

      
      imagePullSecrets:
        - name: regcred

      
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: banking-frontend
